@@ -1614,10 +1614,11 @@ ARGUMENTS to actually emit the message (if applicable)."
     ;; The message.
     (insert (apply #'format-message fmt-string arguments))))
 
-(defvar tramp-message-show-message t
+(defvar tramp-message-show-message (null noninteractive)
   "Show Tramp message in the minibuffer.
-This variable is used to disable messages from `tramp-error'.
-The messages are visible anyway, because an error is raised.")
+This variable is used to suppress progress reporter output, and
+to disable messages from `tramp-error'.  Those messages are
+visible anyway, because an error is raised.")
 
 (defsubst tramp-message (vec-or-proc level fmt-string &rest arguments)
   "Emit a message depending on verbosity level.
@@ -2217,6 +2218,8 @@ Falls back to normal file name handler if no Tramp file name handler exists."
 			(let ((default-directory
 				(tramp-compat-temporary-file-directory)))
 			  (load (cadr sf) 'noerror 'nomessage)))
+;;		      (tramp-message
+;;		       v 4 "Running `%s'..." (cons operation args))
 		      ;; If `non-essential' is non-nil, Tramp shall
 		      ;; not open a new connection.
 		      ;; If Tramp detects that it shouldn't continue
@@ -2240,6 +2243,8 @@ Falls back to normal file name handler if no Tramp file name handler exists."
 				      (let ((tramp-locker t))
 					(apply foreign operation args))
 				    (setq tramp-locked tl))))))
+;;		      (tramp-message
+;;		       v 4 "Running `%s'...`%s'" (cons operation args) result)
 		      (cond
 		       ((eq result 'non-essential)
 			(tramp-message
