@@ -1,3 +1,13 @@
+2018-01-04  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp.el (tramp-message-show-message): Change default.
+
+	* tramp-adb.el (tramp-adb-handle-write-region):
+	* tramp-gvfs.el (tramp-gvfs-handle-write-region):
+	* tramp-sh.el (tramp-sh-handle-write-region):
+	* tramp-smb.el (tramp-smb-handle-write-region):
+	Write proper message.
+
 2017-12-16  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp.el (tramp-accept-process-output):
